--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -1,14 +1,23 @@
 mixin storeForm(store = {})
-  form(action=`/add/${store._id || ''}` method="POST" class="card")
+  form(action=`/add/${store._id || ''}` method="POST" class="card" enctype="multipart/form-data")
     //- The action=`/add/${store._id || ''}` is a nice trick we can use in order to reuse an existing form for both "adding" and "updating"
     label(for="name") Name
     input(type="text" name="name" value=store.name)
     label(for="description") Description
     textarea(name="description")= store.description
+    label(for="photo") Photo
+      input(type="file" name="photo" id="photo" accept="image/gif, image/png, image/jpeg")
+      if store.photo
+        img(src=`/uploads/${store.photo}`, alt=store.name width=200)
     //- address, lng and lat...
-    label(for="address")
-    input(type="text" id="address" name="location[address]")
+    label(for="address") Address
+    input(type="text" id="address" name="location[address]" value=(store.location && store.location.address))
     //- The weird "location[address]" syntax signifies the address property of the location object in the storeSchema inside Store.js.  This syntax is made possible by the body parser module required in App.js (app.use(bodyParser.urlencoded({ extended: true }));)
+    //- The (store.location && store.location.address) syntax makes value look for store.location first
+    label(for='lng') Address Lng
+    input(type="text" id="lng" name="location[coordinates][0]" value=(store.location && store.location.coordinates[0]) required)
+    label(for='lat') Address Lat
+    input(type="text" id="lat" name="location[coordinates][1]" value=(store.location && store.location.coordinates[1]) required)
     - const choices = ['Wifi', 'Open Late', 'Family Friendly', 'Vegetarian', 'Licensed']
     - const tags = store.tags || []
     ul.tags
@@ -17,4 +26,4 @@ mixin storeForm(store = {})
           input(type="checkbox" id=choice value=choice name="tags" checked=(tags.includes(choice)))
           label(for=choice) #{choice}
           //- label(for=choice)= choice
-    input(type="submit" value="Save -->" class="button")
+    input(type="submit" value="Save ->" class="button")
